intial commit updaye

--- a/rooms-gallery.html
+++ b/rooms-gallery.html
@@ -434,23 +434,26 @@
                       <div class="col-12 pt-4">
                         <div class="form-item">
                           <input
-                            type="email"
-                            name="email"
-                            class="input-sm"
-                            style="width: 100%"
-                            placeholder="Correo electrónico"
+                          type="email"
+						  id="email"
+                          name="email"
+                          class="input-sm"
+                          style="width: 100%"
+                          placeholder="Correo electrónico"
                           />
-                        </div>
-                      </div>
-
-                      <div class="col-12 pt-4">
-                        <div class="form-item">
+                          <span class="date-text date-depart"></span>
+                          </div>
+                          </div>
+                          <div class="col-12 pt-4">
+                          <div class="form-item">
+                          <span class="fontawesome-calendar"></span>
                           <input
-                            type="tel"
-                            name="phone"
-                            class="input-sm"
-                            style="width: 100%"
-                            placeholder="Número de teléfono"
+                          type="tel"
+                          name="phone"
+						  id="phone"
+                          class="input-sm"
+                          style="width: 100%"
+                          placeholder="Número de teléfono"
                           />
                         </div>
                       </div>
