--- a/rooms-jacuzzy.html
+++ b/rooms-jacuzzy.html
@@ -358,6 +358,7 @@
                           <span class="fontawesome-calendar"></span>
                           <input
                           type="email"
+						  id="email"
                           name="email"
                           class="input-sm"
                           style="width: 100%"
@@ -372,6 +373,7 @@
                           <input
                           type="tel"
                           name="phone"
+						  id="phone"
                           class="input-sm"
                           style="width: 100%"
                           placeholder="Número de teléfono"
