--- a/rooms-aptos.html
+++ b/rooms-aptos.html
@@ -405,6 +405,7 @@
                           <span class="fontawesome-calendar"></span>
                           <input
                           type="email"
+						  id="email"
                           name="email"
                           class="input-sm"
                           style="width: 100%"
@@ -419,6 +420,7 @@
                           <input
                           type="tel"
                           name="phone"
+						  id="phone"
                           class="input-sm"
                           style="width: 100%"
                           placeholder="Número de teléfono"
