--- a/rooms-grupal.html
+++ b/rooms-grupal.html
@@ -356,20 +356,22 @@
 								<span class="fontawesome-calendar"></span>
 								<input
 								type="email"
+								id="email"
 								name="email"
 								class="input-sm"
 								style="width: 100%"
 								placeholder="Correo electrónico"
 								/>
 								<span class="date-text date-depart"></span>
-							  </div>
-							  </div>
-							  <div class="col-12 pt-4">
-							  <div class="form-item">
+								</div>
+								</div>
+								<div class="col-12 pt-4">
+								<div class="form-item">
 								<span class="fontawesome-calendar"></span>
 								<input
 								type="tel"
 								name="phone"
+								id="phone"
 								class="input-sm"
 								style="width: 100%"
 								placeholder="Número de teléfono"
