--- a/rooms-suite.html
+++ b/rooms-suite.html
@@ -406,6 +406,7 @@
                           <span class="fontawesome-calendar"></span>
                           <input
                           type="email"
+						  id="email"
                           name="email"
                           class="input-sm"
                           style="width: 100%"
@@ -420,6 +421,7 @@
                           <input
                           type="tel"
                           name="phone"
+						  id="phone"
                           class="input-sm"
                           style="width: 100%"
                           placeholder="Número de teléfono"
